--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="d-flex">
       <h1>Hello World</h1>
       <p>Hi there</p>
+      <i class="fab fa-instagram"></i>
     </div>
   </body>
 </html>
