--- a/index.html
+++ b/index.html
@@ -26,13 +26,39 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Document</title>
+    <title>Frontend Developer | Stephanie Parra</title>
   </head>
   <body>
-    <div class="d-flex">
-      <h1>Hello World</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Stephanie Parra</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1>
+      Multidisciplinary, design-oriented frontend developer interested in
+      accessibility & digital literacy. Based in Los Angeles.
+    </h1>
+    <a href="#" class="view-link">View my work ↓</a>
   </body>
 </html>
