Edited css and h1 html

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
         </div>
       </div>
     </nav>
-    <h1>
-      Multidisciplinary, design-oriented frontend developer interested in
-      accessibility & digital literacy. Based in Los Angeles.
-    </h1>
-    <a href="#" class="view-link">View my work ↓</a>
+    <div class="hero">
+      <h1>
+        Frontend developer based in Los Angeles interested in accessibility,
+        optimal user experience & delightful design.
+      </h1>
+      <a href="#" class="view-link">View my work ↓</a>
+    </div>
   </body>
 </html>
