Added bootstrap grid

--- a/index.html
+++ b/index.html
@@ -62,5 +62,20 @@
       </h1>
       <a href="#" class="view-link">View my work ↓</a>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+          <h2 class="mb-5">Landing Page Project</h2>
+          <p class="mb-5">
+            Static landing page on Mexican sweet bread (pan dulce) created with
+            HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
+            desktop.
+          </p>
+          <a href="#" class="primary-button">Launch project</a>
+          <a href="#" class="secondary-button">Github</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
