Added more grid items

--- a/index.html
+++ b/index.html
@@ -63,17 +63,72 @@
       <a href="#" class="view-link">View my work ↓</a>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-6"></div>
+      <div class="row mb-5">
         <div class="col-6">
-          <h2 class="mb-5">Landing Page Project</h2>
-          <p class="mb-5">
-            Static landing page on Mexican sweet bread (pan dulce) created with
-            HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
-            desktop.
-          </p>
-          <a href="#" class="primary-button">Launch project</a>
-          <a href="#" class="secondary-button">Github</a>
+          <img src="" class="img-fluid" alt="" />
+        </div>
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Landing Page Project</h2>
+            <p class="mb-5">
+              Static landing page on Mexican sweet bread (pan dulce) created
+              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
+              desktop.
+            </p>
+            <a href="#" class="primary-button">Launch project</a>
+            <a href="#" class="secondary-button">Github</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5">
+              Static landing page on Mexican sweet bread (pan dulce) created
+              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
+              desktop.
+            </p>
+            <a href="#" class="primary-button">Launch project</a>
+            <a href="#" class="secondary-button">Github</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-6">
+          <img src="" class="img-fluid" alt="" />
+        </div>
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Landing Page Project</h2>
+            <p class="mb-5">
+              Static landing page on Mexican sweet bread (pan dulce) created
+              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
+              desktop.
+            </p>
+            <a href="#" class="primary-button">Launch project</a>
+            <a href="#" class="secondary-button">Github</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5">
+              Static landing page on Mexican sweet bread (pan dulce) created
+              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
+              desktop.
+            </p>
+            <a href="#" class="primary-button">Launch project</a>
+            <a href="#" class="secondary-button">Github</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="" class="img-fluid" alt="" />
         </div>
       </div>
     </div>
