Changed fonts and css on homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Yeseva+One&display=swap"
       rel="stylesheet"
     />
     <script
@@ -57,12 +57,13 @@
     </nav>
     <div class="hero">
       <h1>
-        Frontend developer based in Los Angeles interested in accessibility,
+        Frontend developer based in Los Angeles focusing on accessibility,
         optimal user experience & delightful design.
       </h1>
       <a href="#" class="view-link">View my work ↓</a>
     </div>
     <div class="container">
+      <p><span class="section-title">Frontend Dev</span></p>
       <div class="row mb-5">
         <div class="col-6">
           <img src="" class="img-fluid" alt="" />
@@ -85,9 +86,9 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5">
-              Static landing page on Mexican sweet bread (pan dulce) created
-              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
-              desktop.
+              Using Vanilla Javascript and OpenWeather API integration, I coded
+              a weather app that gives the weather in real-time as well as a
+              forecast and other details.
             </p>
             <a href="#" class="primary-button">Launch project</a>
             <a href="#" class="secondary-button">Github</a>
@@ -99,32 +100,30 @@
       </div>
       <div class="row mb-5">
         <div class="col-6">
+          <p><span class="section-title">UX Design</span></p>
           <img src="" class="img-fluid" alt="" />
         </div>
         <div class="col-6">
           <div class="project-description">
-            <h2 class="mb-5">Landing Page Project</h2>
+            <h2 class="mb-5">Kind-1-1</h2>
             <p class="mb-5">
-              Static landing page on Mexican sweet bread (pan dulce) created
-              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
-              desktop.
+              An app that provides marginalized communities and allies
+              resources, education, and crises response as alternatives to the
+              police. Adobe Design for Good Creative Jam Honorable Mention.
             </p>
-            <a href="#" class="primary-button">Launch project</a>
-            <a href="#" class="secondary-button">Github</a>
+            <a href="#" class="primary-button">View Case Study</a>
           </div>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-6">
           <div class="project-description">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mb-5">Senior Tix</h2>
             <p class="mb-5">
-              Static landing page on Mexican sweet bread (pan dulce) created
-              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
-              desktop.
+              Redesigning elements of a discount tickets site to make it more
+              accessible to senior citizens with various disabilities.
             </p>
-            <a href="#" class="primary-button">Launch project</a>
-            <a href="#" class="secondary-button">Github</a>
+            <a href="#" class="primary-button">View Case Study</a>
           </div>
         </div>
         <div class="col-6">
