H1 text content changed

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </nav>
     <div class="hero">
       <h1>
-        Frontend developer based in Los Angeles focusing on accessibility,
-        optimal user experience & delightful design.
+        Design-forward frontend developer based in Los Angeles focusing on
+        accessibility & optimal (and delightful!) user experiences.
       </h1>
       <a href="#" class="view-link">View my work ↓</a>
     </div>
