Added project images

--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
       <a href="#" class="view-link">View my work ↓</a>
     </div>
     <div class="container">
-      <p><span class="section-title">Frontend Dev</span></p>
+      <p class="section-title">Frontend Dev</p>
       <div class="row mb-5">
         <div class="col-6">
-          <img src="" class="img-fluid" alt="" />
+          <img
+            src="/images/landing-page.png"
+            class="img-fluid project-image"
+            alt="landing page"
+          />
         </div>
         <div class="col-6">
           <div class="project-description">
@@ -95,13 +99,21 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="" class="img-fluid" alt="" />
+          <img
+            src="/images/weather-app.png"
+            class="img-fluid project-image"
+            alt="weather app"
+          />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-6">
-          <p><span class="section-title">UX Design</span></p>
-          <img src="" class="img-fluid" alt="" />
+          <p class="section-title">UX Design</p>
+          <img
+            src="/images/kind11.png"
+            class="img-fluid project-image"
+            alt="Kind-1-1 app"
+          />
         </div>
         <div class="col-6">
           <div class="project-description">
@@ -127,7 +139,11 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="" class="img-fluid" alt="" />
+          <img
+            src="/images/senior-tix.png"
+            class="img-fluid project-image"
+            alt="senior tix site"
+          />
         </div>
       </div>
     </div>
