CSS and font changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Yeseva+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&family=Spectral:wght@300&display=swap"
       rel="stylesheet"
     />
     <script
@@ -57,13 +57,16 @@
     </nav>
     <div class="hero">
       <h1>
-        Design-forward frontend developer based in Los Angeles focusing on
-        accessibility & optimal (and delightful!) user experiences.
+        Design-forward frontend developer based in Los Angeles. Currently
+        focused on accessibility & optimal (and delightful!) user experiences.
+        Open to internships and entry-level positions. 😄
       </h1>
       <a href="#" class="view-link">View my work ↓</a>
     </div>
     <div class="container">
-      <p class="section-title">Frontend Dev</p>
+      <p class="section-title">
+        <i class="fas fa-folder-open"></i>Frontend Dev
+      </p>
       <div class="row mb-5">
         <div class="col-6">
           <img
@@ -107,8 +110,8 @@
         </div>
       </div>
       <div class="row mb-5">
+        <p class="section-title">UX Design</p>
         <div class="col-6">
-          <p class="section-title">UX Design</p>
           <img
             src="/images/kind11.png"
             class="img-fluid project-image"
