Changed css and uploaded new images

--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
     </nav>
     <div class="hero">
       <h1>
-        Design-forward frontend developer based in Los Angeles. Currently
-        focused on accessibility & optimal (and delightful!) user experiences.
-        Open to internships and entry-level positions. 😄
+        Design-forward frontend developer focused on accessibility & optimal
+        user experiences. Based in Los Angeles.
       </h1>
-      <a href="#" class="view-link">View my work ↓</a>
+    </div>
+    <div class="view-link">
+      <a href="#">Front-End Dev</a>
+      <br />
+      <a href="#">UX Design</a>
     </div>
     <div class="container">
       <p class="section-title">
-        <i class="fas fa-folder-open"></i>Frontend Dev
+        <i class="fas fa-folder-open"></i> Frontend Dev
       </p>
       <div class="row mb-5">
         <div class="col-6">
@@ -110,7 +113,9 @@
         </div>
       </div>
       <div class="row mb-5">
-        <p class="section-title">UX Design</p>
+        <p class="section-title">
+          <i class="fas fa-folder-open"></i> UX Design
+        </p>
         <div class="col-6">
           <img
             src="/images/kind11.png"
