--- a/index.html
+++ b/index.html
@@ -57,19 +57,17 @@
     </nav>
     <div class="hero">
       <h1>
-        Design-forward frontend developer focused on accessibility & optimal
-        user experiences. Based in Los Angeles.
+        Design-oriented frontend developer focused on accessibility, optimal
+        user experience & delightful design. Based in Los Angeles.
       </h1>
     </div>
     <div class="view-link">
-      <a href="#">Front-End Dev</a>
+      <a href="#" class="highlight-1">Front-End Dev <i class="fas fa-code"></i></a>
       <br />
-      <a href="#">UX Design</a>
+      <a href="#" class="highlight-2">UX Design <i class="fas fa-pencil-ruler"></i></a>
     </div>
     <div class="container">
-      <p class="section-title">
-        <i class="fas fa-folder-open"></i> Frontend Dev
-      </p>
+      <p class="section-title frontend-dev"><i class="fas fa-code"></i> Frontend Dev</p>
       <div class="row mb-5">
         <div class="col-6">
           <img
@@ -114,7 +112,7 @@
       </div>
       <div class="row mb-5">
         <p class="section-title">
-          <i class="fas fa-folder-open"></i> UX Design
+          <i class="fas fa-pencil-ruler"></i> UX Design
         </p>
         <div class="col-6">
           <img
