--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
     <div class="hero">
-      <h1>
+      <h1><i class="fas fa-laptop-code"></i>
         Design-oriented frontend developer focused on accessibility, optimal
         user experience & delightful design. Based in Los Angeles.
       </h1>
