CSS and first <p> edit

--- a/index.html
+++ b/index.html
@@ -56,18 +56,19 @@
       </div>
     </nav>
     <div class="hero">
-      <h1><i class="fas fa-laptop-code"></i>
+      <h1>
+        <i class="fas fa-laptop-code"></i>
         Design-oriented frontend developer focused on accessibility, optimal
-        user experience & delightful design. Based in Los Angeles.
+        user experience & delightful design. Based in Los Angeles.🌴
       </h1>
-    </div>
-    <div class="view-link">
-      <a href="#" class="highlight-1">Front-End Dev <i class="fas fa-code"></i></a>
-      <br />
-      <a href="#" class="highlight-2">UX Design <i class="fas fa-pencil-ruler"></i></a>
+      <p class="text-center view-work">
+        View my work below <i class="fas fa-arrow-down"></i>
+      </p>
     </div>
     <div class="container">
-      <p class="section-title frontend-dev"><i class="fas fa-code"></i> Frontend Dev</p>
+      <p class="section-title highlight-1">
+        <i class="fas fa-code"></i> Frontend Dev
+      </p>
       <div class="row mb-5">
         <div class="col-6">
           <img
@@ -96,7 +97,7 @@
             <p class="mb-5">
               Using Vanilla Javascript and OpenWeather API integration, I coded
               a weather app that gives the weather in real-time as well as a
-              forecast and other details.
+              forecast and other details. Best viewed on desktop.
             </p>
             <a href="#" class="primary-button">Launch project</a>
             <a href="#" class="secondary-button">Github</a>
@@ -111,7 +112,7 @@
         </div>
       </div>
       <div class="row mb-5">
-        <p class="section-title">
+        <p class="section-title highlight-2">
           <i class="fas fa-pencil-ruler"></i> UX Design
         </p>
         <div class="col-6">
