--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     </nav>
     <div class="hero">
       <h1>
-        <i class="fas fa-laptop-code"></i>
-        Design-oriented frontend developer focused on accessibility, optimal
+        Design-oriented frontend developer 👩🏻‍💻 focused on accessibility, optimal
         user experience & delightful design. Based in Los Angeles.🌴
       </h1>
       <p class="text-center view-work">
@@ -66,7 +65,7 @@
       </p>
     </div>
     <div class="container">
-      <p class="section-title highlight-1">
+      <p class="section-title highlight">
         <i class="fas fa-code"></i> Frontend Dev
       </p>
       <div class="row mb-5">
@@ -112,7 +111,7 @@
         </div>
       </div>
       <div class="row mb-5">
-        <p class="section-title highlight-2">
+        <p class="section-title highlight">
           <i class="fas fa-pencil-ruler"></i> UX Design
         </p>
         <div class="col-6">
