Section titles CSS changed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
     <div class="hero">
       <h1>
-        Design-oriented frontend developer 👩🏻‍💻 focused on accessibility, optimal
+        Frontend developer 👩🏻‍💻 focused on accessibility, optimal
         user experience & delightful design. Based in Los Angeles.🌴
       </h1>
       <p class="text-center view-work">
@@ -65,11 +65,11 @@
       </p>
     </div>
     <div class="container">
-      <p class="section-title highlight">
+      <p class="section-title highlight-1">
         <i class="fas fa-code"></i> Frontend Dev
       </p>
       <div class="row mb-5">
-        <div class="col-6">
+        <div class="col d-none d-md-block">
           <img
             src="/images/landing-page.png"
             class="img-fluid project-image"
@@ -102,7 +102,7 @@
             <a href="#" class="secondary-button">Github</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col d-none d-md-block">
           <img
             src="/images/weather-app.png"
             class="img-fluid project-image"
@@ -111,10 +111,10 @@
         </div>
       </div>
       <div class="row mb-5">
-        <p class="section-title highlight">
+        <p class="section-title highlight-2">
           <i class="fas fa-pencil-ruler"></i> UX Design
         </p>
-        <div class="col-6">
+        <div class="col d-none d-md-block">
           <img
             src="/images/kind11.png"
             class="img-fluid project-image"
@@ -144,7 +144,7 @@
             <a href="#" class="primary-button">View Case Study</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col d-none d-md-block">
           <img
             src="/images/senior-tix.png"
             class="img-fluid project-image"
