Updated small screen responsiveness

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
         <i class="fas fa-code"></i> Frontend Dev
       </p>
       <div class="row mb-5">
-        <div class="col d-none d-md-block">
+        <div class="col-sm-6 d-none d-md-block">
           <img
             src="/images/landing-page.png"
             class="img-fluid project-image"
             alt="landing page"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <div class="project-description">
             <h2 class="mb-5">Landing Page Project</h2>
             <p class="mb-5">
@@ -84,25 +84,25 @@
               with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
               desktop.
             </p>
-            <a href="#" class="primary-button">Launch project</a>
-            <a href="#" class="secondary-button">Github</a>
+            <a href="#" class="primary-button btn-group">Launch project</a>
+            <a href="#" class="secondary-button btn-group">Github</a>
           </div>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <div class="project-description">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mb-5 mt-5">Weather App</h2>
             <p class="mb-5">
               Using Vanilla Javascript and OpenWeather API integration, I coded
               a weather app that gives the weather in real-time as well as a
               forecast and other details. Best viewed on desktop.
             </p>
-            <a href="#" class="primary-button">Launch project</a>
-            <a href="#" class="secondary-button">Github</a>
+            <a href="#" class="primary-button btn-group">Launch project</a>
+            <a href="#" class="secondary-button btn-group">Github</a>
           </div>
         </div>
-        <div class="col d-none d-md-block">
+        <div class="col-sm-6 d-none d-md-block">
           <img
             src="/images/weather-app.png"
             class="img-fluid project-image"
@@ -114,29 +114,29 @@
         <p class="section-title highlight-2">
           <i class="fas fa-pencil-ruler"></i> UX Design
         </p>
-        <div class="col d-none d-md-block">
+        <div class="col-sm-6 d-none d-md-block">
           <img
             src="/images/kind11.png"
             class="img-fluid project-image"
             alt="Kind-1-1 app"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <div class="project-description">
             <h2 class="mb-5">Kind-1-1</h2>
             <p class="mb-5">
               An app that provides marginalized communities and allies
               resources, education, and crises response as alternatives to the
-              police. Adobe Design for Good Creative Jam Honorable Mention.
+              police. <span class="adobe">Adobe Design for Good Creative Jam Honorable Mention.</span>
             </p>
-            <a href="#" class="primary-button">View Case Study</a>
+            <a href="#" class="primary-button mb-5">View Case Study</a>
           </div>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <div class="project-description">
-            <h2 class="mb-5">Senior Tix</h2>
+            <h2 class="mb-5 mt-5">Senior Tix</h2>
             <p class="mb-5">
               Redesigning elements of a discount tickets site to make it more
               accessible to senior citizens with various disabilities.
@@ -144,7 +144,7 @@
             <a href="#" class="primary-button">View Case Study</a>
           </div>
         </div>
-        <div class="col d-none d-md-block">
+        <div class="col-sm-6 d-none d-md-block">
           <img
             src="/images/senior-tix.png"
             class="img-fluid project-image"
