Added navbar and some responsive properties

--- a/about.html
+++ b/about.html
@@ -31,9 +31,35 @@
       <title>About Stephanie Parra</title>
     </head>
     <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Stephanie Parra</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="about-section-hero container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-md-6">
             <h1>👋🏼 Hi, I'm Stephanie!</h1>
             <p>
               I'm a self-taught frontend dev currently working on learning
@@ -49,9 +75,9 @@
               I'm open to full-time junior frontend developer roles or
               internships.
             </p>
-            <a href="" class="view-resume">View my resumé 📄</a>
+            <a href="" class="view-resume">View my resumé →</a>
           </div>
-          <div class="col-6">
+          <div class="col-md-6">
             <img
               src="images/profile-pic.png"
               class="img-fluid profile-pic"
