--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
       </nav>
       <div class="about-section-hero container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h1>👋🏼 Hi, I'm Stephanie!</h1>
             <p>
               I'm a self-taught frontend dev currently working on learning
@@ -70,14 +70,13 @@
               food industry background, I value open communication and
               collaboration.
             </p>
-            <br />
             <p>
               I'm open to full-time junior frontend developer roles or
               internships.
             </p>
             <a href="" class="view-resume">View my resumé →</a>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <img
               src="images/profile-pic.png"
               class="img-fluid profile-pic"
