Links to about page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link active" aria-current="page" href="#">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
           </ul>
         </div>
@@ -57,8 +57,8 @@
     </nav>
     <div class="hero">
       <h1>
-        Frontend developer 👩🏻‍💻 focused on accessibility, optimal
-        user experience & delightful design. Based in Los Angeles.🌴
+        Frontend developer 👩🏻‍💻 focused on accessibility, optimal user experience
+        & delightful design. Based in Los Angeles.🌴
       </h1>
       <p class="text-center view-work">
         View my work below <i class="fas fa-arrow-down"></i>
@@ -127,7 +127,10 @@
             <p class="mb-5">
               An app that provides marginalized communities and allies
               resources, education, and crises response as alternatives to the
-              police. <span class="adobe">Adobe Design for Good Creative Jam Honorable Mention.</span>
+              police.
+              <span class="adobe"
+                >Adobe Design for Good Creative Jam Honorable Mention.</span
+              >
             </p>
             <a href="#" class="primary-button mb-5">View Case Study</a>
           </div>
