--- a/about.html
+++ b/about.html
@@ -84,6 +84,26 @@
             />
           </div>
         </div>
+        <div class="skills-section">
+          <h2 class="skills-header text-center">Skills & Technologies</h2>
+          <div class="container skills">
+            <div class="row row-skills">
+              <div class="col-lg-4 text-center">HTML</div>
+              <div class="col-lg-4 text-center">JavaScript</div>
+              <div class="col-lg-4 text-center">Netlify (Hosting)</div>
+            </div>
+            <div class="row row-skills">
+              <div class="col-lg-4 text-center ">HTML</div>
+              <div class="col-lg-4 text-center">JavaScript</div>
+              <div class="col-lg-4 text-center">Netlify (Hosting)</div>
+            </div>
+            <div class="row row-skills">
+              <div class="col-lg-4 text-center">HTML</div>
+              <div class="col-lg-4 text-center">JavaScript</div>
+              <div class="col-lg-4 text-center">Netlify (Hosting)</div>
+            </div>
+          </div>
+        </div>
       </div>
     </body>
   </html>
