Work page images and content

--- a/work.html
+++ b/work.html
@@ -58,16 +58,34 @@
         </div>
       </nav>
       <div class="content-container container">
-          <div class="content">
-              <div class="col-lg-6">
-            <h1>👋🏼 Hi, I'm Stephanie!</h1>
-          </div>
+        <div class="content">
+          <h1 class="mb-5">Take a look at what I've been working on!</h1>
           <div class="row">
-              <div class="col-6">
-                  <img src="images/landing-page.png" class="img-fluid" />
-                  <h3 class="text-center">Landing Page Project</h3>
-                  <p class="text-center">Built with HTML, CSS, JavaScript</p>
-              </div>
+            <div class="col-md-6 mb-5">
+              <img src="images/landing-page.png" class="img-fluid" />
+              <h3 class="text-center">Landing Page Project</h3>
+              <p class="text-center">Built with HTML, CSS, JavaScript</p>
+            </div>
+            <div class="col-md-6 mb-5">
+              <img src="images/weather-app.png" class="img-fluid" />
+              <h3 class="text-center">Weather App</h3>
+              <p class="text-center">Built with Vanilla JavaScript and APIs</p>
+            </div>
+            <div class="col-md-6 mb-5">
+              <img src="images/kind11.png" class="img-fluid" />
+              <h3 class="text-center">Kind-1-1</h3>
+              <p class="text-center">
+                UX design project for Adobe's Design For Good Creative Jam
+                (Honorable Mention)
+              </p>
+            </div>
+            <div class="col-md-6 mb-5">
+              <img src="images/senior-tix.png" class="img-fluid" />
+              <h3 class="text-center">Senior Tix</h3>
+              <p class="text-center">
+                Discount tickets redesign for disability and impairment
+              </p>
+            </div>
           </div>
         </div>
       </div>
