--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Work</a>
+              <a class="nav-link active" aria-current="page" href="work.html"
+                >Work</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
