--- a/index.html
+++ b/index.html
@@ -29,37 +29,15 @@
     <title>Frontend Developer | Stephanie Parra</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Stephanie Parra</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="work.html"
-                >Work</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <h3 class="nav-name">Stephanie Parra 👾</h3>
+        <ul>
+          <li>Work</li>
+          <li>About</li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <h1>
         Frontend developer 👩🏻‍💻 focused on accessibility, optimal user experience
