Added nav links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <h3 class="nav-name">Stephanie Parra 👾</h3>
+        <h3 class="nav-name"><a href="/">Stephanie Parra 👾</a></h3>
         <ul>
-          <li>Work</li>
-          <li>About</li>
+          <li class="active"><a href="/">Work</a></li>
+          <li><a href="/about.html">About</a></li>
         </ul>
       </nav>
     </div>
