--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Stephanie Parra</a>
+          <a class="navbar-brand" href="#">Stephanie Parra 👾</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -91,18 +91,18 @@
               <div class="col-lg-4 text-center">
                 <i class="fab fa-html5"></i>
               </div>
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <i class="fab fa-css3-alt"></i>
               </div>
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <i class="fab fa-bootstrap"></i>
               </div>
             </div>
             <div class="row row-skills">
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <i class="fab fa-js-square"></i>
               </div>
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <img src="/images/api.png" width="60" />
               </div>
               <div class="col-lg-4 text-center">
@@ -110,13 +110,13 @@
               </div>
             </div>
             <div class="row row-skills">
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <img src="/images/netlify.png" width="60" />
               </div>
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <img src="/images/vscode.png" width="60" />
               </div>
-              <div class="col-lg-4 text-center">
+              <div class="col-4 text-center">
                 <i class="fab fa-figma"></i>
               </div>
             </div>
