--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Stephanie Parra 👾</a>
+          <a class="navbar-brand" href="/index.html">Stephanie Parra 👾</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -48,10 +48,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Work</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/about.html">About</a>
               </li>
             </ul>
           </div>
