--- a/about.html
+++ b/about.html
@@ -46,9 +46,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav navbar-right ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" aria-current="page" href="/">Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/about.html">About</a>
               </li>
             </ul>
           </div>
