--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="/index.html">Stephanie Parra 👾</a>
         <button
           class="navbar-toggler"
@@ -44,7 +44,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav navbar-right ms-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Work</a>
             </li>
