Created the footer and social links

--- a/about.html
+++ b/about.html
@@ -123,6 +123,29 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-3">
+          <a
+            href="mailto:stephanieparrastudio@gmail.com"
+            target="_blank"
+            class="email-link"
+            >stephanieparrastudio@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/stephanieparra" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/stephaniemsparra/"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://twitter.com/StephanieMParra" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </body>
   </html>
 </html>
