--- a/about.html
+++ b/about.html
@@ -28,12 +28,19 @@
         crossorigin="anonymous"
       ></script>
       <link rel="stylesheet" href="src/styles.css" />
+      <meta
+        name="description"
+        content="Stephanie Parra is a frontend developer focused on accessibility, optimal user experience
+        & delightful design. She is based in Los Angeles."
+      />
       <title>About Stephanie Parra</title>
     </head>
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Stephanie Parra 👾</a>
+          <a class="navbar-brand" href="/index.html" title="Stephanie's Work"
+            >Stephanie Parra 👾</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -48,10 +55,21 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav navbar-right ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Work</a>
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="/"
+                  title="Stephanie's Work"
+                  >Work</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/about.html">About</a>
+                <a
+                  class="nav-link active"
+                  href="/about.html"
+                  title="About Stephanie"
+                  >About</a
+                >
               </li>
             </ul>
           </div>
