Added button links

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <img
             src="/images/landing-page.png"
             class="img-fluid project-image"
-            alt="landing page"
+            alt="landing page project"
           />
         </div>
         <div class="col-sm-6">
@@ -113,15 +113,25 @@
               a weather app that gives the weather in real-time as well as a
               forecast and other details. Best viewed on desktop.
             </p>
-            <a href="#" class="primary-button btn-group">Launch project</a>
-            <a href="#" class="secondary-button btn-group">Github</a>
+            <a
+              href="https://goofy-davinci-995ba9.netlify.app"
+              target="_blank"
+              class="primary-button btn-group"
+              >Launch project</a
+            >
+            <a
+              href="https://github.com/stephanieparra/shecodes-weather-app"
+              target="_blank"
+              class="secondary-button btn-group"
+              >Github</a
+            >
           </div>
         </div>
         <div class="col-sm-6 d-none d-md-block">
           <img
             src="/images/weather-app.png"
             class="img-fluid project-image"
-            alt="weather app"
+            alt="weather app project"
           />
         </div>
       </div>
@@ -166,7 +176,7 @@
           <img
             src="/images/senior-tix.png"
             class="img-fluid project-image"
-            alt="senior tix site"
+            alt="senior tix project"
           />
         </div>
       </div>
