Added more links to buttons

--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
               desktop.
             </p>
             <a href="#" class="primary-button btn-group">Launch project</a>
-            <a href="#" class="secondary-button btn-group">Github</a>
+            <a
+              href="https://github.com/stephanieparra/landing-page-project"
+              target="_blank"
+              class="secondary-button btn-group"
+              >Github</a
+            >
           </div>
         </div>
       </div>
@@ -157,7 +162,12 @@
                 >Adobe Design for Good Creative Jam Honorable Mention.</span
               >
             </p>
-            <a href="#" class="primary-button mb-5">View Case Study</a>
+            <a
+              href="https://uxfol.io/p/stephanieparrastudio/03a2e210"
+              target="_blank"
+              class="primary-button mb-5"
+              >View Case Study</a
+            >
           </div>
         </div>
       </div>
@@ -169,7 +179,12 @@
               Redesigning elements of a discount tickets site to make it more
               accessible to senior citizens with various disabilities.
             </p>
-            <a href="#" class="primary-button">View Case Study</a>
+            <a
+              href="https://uxfol.io/p/stephanieparrastudio/03731255"
+              target="_blank"
+              class="primary-button"
+              >View Case Study</a
+            >
           </div>
         </div>
         <div class="col-sm-6 d-none d-md-block">
