Added titles to links

--- a/index.html
+++ b/index.html
@@ -202,17 +202,27 @@
           href="mailto:stephanieparrastudio@gmail.com"
           target="_blank"
           class="email-link"
+          title="Stephanie's email"
           >stephanieparrastudio@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/stephanieparra" target="_blank"
+        <a
+          href="https://github.com/stephanieparra"
+          target="_blank"
+          title="Github Profile"
           ><i class="fab fa-github"></i
         ></a>
-        <a href="https://www.linkedin.com/in/stephaniemsparra/" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/stephaniemsparra/"
+          target="_blank"
+          title="LinkedIn Profile"
           ><i class="fab fa-linkedin"></i
         ></a>
-        <a href="https://twitter.com/StephanieMParra" target="_blank"
+        <a
+          href="https://twitter.com/StephanieMParra"
+          target="_blank"
+          title="Twitter Profile"
           ><i class="fab fa-twitter"></i
         ></a>
       </div>
