Added SEO on about page and css to footer paragraph

--- a/about.html
+++ b/about.html
@@ -30,8 +30,7 @@
       <link rel="stylesheet" href="src/styles.css" />
       <meta
         name="description"
-        content="Stephanie Parra is a frontend developer focused on accessibility, optimal user experience
-        & delightful design. She is based in Los Angeles."
+        content="About Stephanie. Stephanie Parra is a self-taught frontend developer and comes from a non-traditional tech background. She values open communication, collaboration, and is open to full-time junior frontend developer roles or internships."
       />
       <title>About Stephanie Parra</title>
     </head>
@@ -163,6 +162,16 @@
             ><i class="fab fa-twitter"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          © 2022 This site was built by Stephanie Parra and is
+          <a
+            href="https://github.com/stephanieparra/portfolio-project"
+            target="_blank"
+            title="Github Profile"
+            class="open-sourced"
+            >open-sourced</a
+          >. 👾
+        </p>
       </footer>
     </body>
   </html>
