--- a/index.html
+++ b/index.html
@@ -226,6 +226,16 @@
           ><i class="fab fa-twitter"></i
         ></a>
       </div>
+      <p class="text-center mt-5">
+        © 2022 This site was built by Stephanie Parra and is
+        <a
+          href="https://github.com/stephanieparra/portfolio-project"
+          target="_blank"
+          title="Github Profile"
+          class="open-sourced"
+          >open-sourced</a
+        >. 👾
+      </p>
     </footer>
   </body>
 </html>
