Added landing page project and SEO titles

--- a/index.html
+++ b/index.html
@@ -99,10 +99,17 @@
               with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
               desktop.
             </p>
-            <a href="#" class="primary-button btn-group">Launch project</a>
+            <a
+              href="https://priceless-jones-08af43.netlify.app/"
+              target="_blank"
+              title="Launch project"
+              class="primary-button btn-group"
+              >Launch Project</a
+            >
             <a
               href="https://github.com/stephanieparra/landing-page-project"
               target="_blank"
+              title="Launch Github"
               class="secondary-button btn-group"
               >Github</a
             >
@@ -121,12 +128,14 @@
             <a
               href="https://goofy-davinci-995ba9.netlify.app"
               target="_blank"
+              title="Launch Project"
               class="primary-button btn-group"
-              >Launch project</a
+              >Launch Project</a
             >
             <a
               href="https://github.com/stephanieparra/shecodes-weather-app"
               target="_blank"
+              title="Launch Github"
               class="secondary-button btn-group"
               >Github</a
             >
@@ -165,6 +174,7 @@
             <a
               href="https://uxfol.io/p/stephanieparrastudio/03a2e210"
               target="_blank"
+              title="View Case Study"
               class="primary-button mb-5"
               >View Case Study</a
             >
@@ -182,6 +192,7 @@
             <a
               href="https://uxfol.io/p/stephanieparrastudio/03731255"
               target="_blank"
+              title="View Case Study"
               class="primary-button"
               >View Case Study</a
             >
