--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           ><i class="fab fa-twitter"></i
         ></a>
       </div>
-      <p class="text-center mt-5">
+      <p class="text-center mt-5" id="copyright">
         © 2022 This site was built by Stephanie Parra and is
         <a
           href="https://github.com/stephanieparra/portfolio-project"
