--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html" title="Stephanie's Work"
+          <a class="navbar-brand" href="/index.html" title="Stephanie Parra"
             >Stephanie Parra 👾</a
           >
           <button
@@ -54,11 +54,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav navbar-right ms-auto">
               <li class="nav-item">
-                <a
-                  class="nav-link"
-                  aria-current="page"
-                  href="/"
-                  title="Stephanie's Work"
+                <a class="nav-link" aria-current="page" href="/" title="Work"
                   >Work</a
                 >
               </li>
@@ -83,9 +79,10 @@
               JavaScript and React. I come from a non-traditional tech
               background (I'm a chef!) and am looking for opportunities where I
               can contribute as a developer and advocate for accessibility,
-              diversity, and inclusivity with what we code and design. Given my
-              food industry background, I value open communication and
-              collaboration.
+              diversity, and inclusivity with what we code and design. Due to my
+              fine-dining catering background, I'm accustomed to working in
+              agile, dynamic environments and value open communication and
+              collaboration to put forth the best version of a product.
             </p>
             <p>
               I'm open to full-time junior frontend developer roles or
