--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" title="Stephanie's Work"
+        <a class="navbar-brand" href="/index.html" title="Stephanie Parra"
           >Stephanie Parra 👾</a
         >
         <button
