Saved resume link

--- a/about.html
+++ b/about.html
@@ -88,7 +88,12 @@
               I'm open to full-time junior frontend developer roles or
               internships.
             </p>
-            <a href="https://docs.google.com/document/d/1xGX4SvHwq4SOu4VSFyPcvoyg4Xd9nz8TKS-cW-sVoys/edit?usp=sharing" target="_blank" class="view-resume">View my resumé →</a>
+            <a
+              href="https://docs.google.com/document/d/1xGX4SvHwq4SOu4VSFyPcvoyg4Xd9nz8TKS-cW-sVoys/edit?usp=sharing"
+              target="_blank"
+              class="view-resume"
+              >View my resumé →</a
+            >
           </div>
           <div class="col-lg-6">
             <img
