Edits on homepage

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
               resources, education, and crises response as alternatives to the
               police.
               <span class="adobe"
-                >Adobe Design for Good Creative Jam Honorable Mention.</span
+                >Adobe Design for Good Creative Jam Honorable Mention.
+                (Recruiters, please ask for pw).</span
               >
             </p>
             <a
